--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <title>Snake Game</title>
     </head>
     <body>
+        <h1> Snake</1>
         <canvas id="snake" width="512" height="512"></canvas> <!--trabalha com a parte grafica do jogo-->
     </body>
 
