--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width. initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="style.css">
         <script defer src="script.js"></script>
         <title>Snake Game</title>
     </head>
     <body>
-        <h1> SNAKE!</1>
-        <canvas id="snake" width="512" height="512"></canvas> <!--trabalha com a parte grafica do jogo-->
+        <h1 class="titulo">Snake!</h1>
+        <canvas id="snake" width="700" height="512"></canvas>
+            <row>
+                <button class="refresh-button" value="Refresh Page" onClick="window.location.reload();">Recomeçar</button>
+            </row>
+        </div>
     </body>
 
 </html>
